objects/ssot__CostBookEntry__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CostAmount__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CostBookId__c</fullName>
        <label>Cost Book</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDateTime__c</fullName>
        <label>Effective From Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDateTime__c</fullName>
        <label>Effective To Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Cost Book Entry Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922308163_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CostBookEntry_CostBookId_map_CostBoo_rel</label>
        <referenceTo>ssot__CostBook__dlm</referenceTo>
        <relationshipLabel>CostBookEntry_CostBookId_map_CostBoo_rel</relationshipLabel>
        <relationshipName>rel_1709922308163_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>